--- a/assets/style/vars/_color.scss
+++ b/assets/style/vars/_color.scss
@@ -1,3 +1,9 @@
-$white: #FFF;
+$white: #FFFFFC;
+$black: #020202;
 
-$card-bg: $white;
+$primary: #C00000; 
+$secondary: #DE3C3C;
+$accent: #F7B32D;
+
+$box-bg: $white;
+$box-txt: $black;
