chore: improved grid

--- a/assets/style/mixins/_grid.scss
+++ b/assets/style/mixins/_grid.scss
@@ -1,3 +1,12 @@
+@mixin create-row($space: $gutter) {
+    margin-right: $space * -1;
+    margin-left: $space * -1;
+    & > .col {
+        padding-right: $space;
+        padding-left: $space;
+    }
+}
+
 @mixin create-col($size: auto, $columns: $cols-count) {
     @if $size == auto {
         flex: 1 1 0;
