--- a/assets/style/_helpers.scss
+++ b/assets/style/_helpers.scss
@@ -19,3 +19,20 @@ $sides: top, right, bottom, left;
         }
     }
 }
+
+.text-left {
+    text-align: left;
+}
+.text-right {
+    text-align: right;
+}
+.text-center {
+    text-align: center;
+}
+
+.inline-block {
+    display: inline-block;
+}
+.block {
+    display: block;
+}
