--- a/assets/style/mixins/_helpers.scss
+++ b/assets/style/mixins/_helpers.scss
@@ -1,5 +1,9 @@
-@mixin create-helper($size: $gutter, $side: right, $item: padding) {
-    #{ $item }-#{ $side }: $size !important;
+@mixin create-helper($size: $gutter, $side: all, $item: padding) {
+    @if $side == all {
+        #{ $item }: $size !important;
+    } @else {
+        #{ $item }-#{ $side }: $size !important;
+    }
 }
 @mixin create-size($size: 100, $item: padding) {
     #{ $item }: $size * 1% !important;
