feat: added switch filter

--- a/assets/style/vars/_color.scss
+++ b/assets/style/vars/_color.scss
@@ -5,5 +5,10 @@ $primary: #C00000;
 $secondary: #DE3C3C;
 $accent: #F7B32D;
 
+$gray-500: #C3C3C3;
+
 $box-bg: $white;
 $box-txt: $black;
+
+$switch-inactive: $gray-500;
+$switch-active: $secondary;
