--- a/assets/style/vars/_radius.scss
+++ b/assets/style/vars/_radius.scss
@@ -3,5 +3,6 @@ $border-radius-xl:      $border-radius-base * 4; // 32px
 $border-radius-lg:      $border-radius-base * 2; // 16px
 $border-radius-sm:      $border-radius-base * 0.75; // 6px
 $border-radius-xs:      $border-radius-base * 0.5; // 4px
+$border-radius-full:    50%;
 
-$card-border-radius:    $border-radius-base;
+$box-border-radius:    $border-radius-base;
