feat: added range selector

--- a/assets/style/vars/_color.scss
+++ b/assets/style/vars/_color.scss
@@ -10,5 +10,5 @@ $gray-500: #C3C3C3;
 $box-bg: $white;
 $box-txt: $black;
 
-$switch-inactive: $gray-500;
-$switch-active: $secondary;
+$filter-inactive: $gray-500;
+$filter-active: $secondary;
