--- a/assets/style/vars/_color.scss
+++ b/assets/style/vars/_color.scss
@@ -4,11 +4,13 @@ $black: #020202;
 $primary: #C00000; 
 $secondary: #DE3C3C;
 $accent: #F7B32D;
+$success: #018951;
 
-$gray-500: #C3C3C3;
+$mute: #C3C3C3;
+
 
 $box-bg: $white;
 $box-txt: $black;
 
-$filter-inactive: $gray-500;
+$filter-inactive: $mute;
 $filter-active: $secondary;
