--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -1,6 +1,8 @@
 @import "type";
 @import "helpers";
 
+@import "vue-snack/dist/vue-snack.min.css";
+
 body {
     overflow-x: hidden;
 }
@@ -15,3 +17,4 @@ body {
 .bold {
     font-weight: $font-weight-bold;
 }
+
